# bili-interdown

./: .gitignore  Cargo.toml  README.md
crates/bidown/: Cargo.toml
crates/bidown-ui/: Cargo.toml
crates/bidown-ui/src/: fetch.rs  main.rs  utils.rs
crates/bidown-ui/ui/: fetch.slint  main.slint  utils.slint
crates/bidown/examples/: demo.rs  fetch.rs  solve.rs  video.rs
crates/bidown/src/: fetch.rs  lib.rs  model.rs  solve.rs  utils.rs  video.rs
crates/bidown/src/fetch/: graph.rs  ready.rs
scripts/: show_graph.py  show_solution.py
