[workspace]
resolver = "2"
members = ["crates/bidown"]

[workspace.package]
author = "fltLi"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[workspace.dependencies]
paste = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
bytes = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.16"
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "brotli", "zstd"] }
reqwest-middleware = { version = "0.5", features = ["json"] }
reqwest-retry = "0.9"
