[workspace]
resolver = "2"
members = ["crates/bidown", "crates/bidown-ui"]

[workspace.package]
author = "fltLi"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[workspace.dependencies]
thiserror = "2.0"
log = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "3.16"
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "brotli", "zstd"] }
reqwest-middleware = { version = "0.5", features = ["json"] }
reqwest-retry = "0.9"
