[package]
name = "bidown-ui"
version = "0.1.0"
description = "互动视频下载, 打包, 求解 GUI"
edition.workspace = true
license.workspace = true

[dependencies]
bidown.path = "../bidown"
log.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
anyhow = "1.0"
chrono = "0.4"
fern = "0.7"
slint = "1.15"
rfd = "0.17"

[build-dependencies]
slint-build = "1.15"
