[package]
name = "bidown"
version = "0.1.0"
description = "互动视频下载打包相关逻辑库"
edition.workspace = true
license.workspace = true

[dependencies]
paste.workspace = true
thiserror.workspace = true
log.workspace = true
bytes.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
reqwest-middleware.workspace = true
serde_repr = "0.1"

[dev-dependencies]
env_logger.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true
reqwest-retry.workspace = true
http = "1.4"
