[package]
name = "bidown"
version = "0.1.0"
description = "互动视频下载, 打包, 求解库"
edition.workspace = true
license.workspace = true

[dependencies]
paste.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
bytes = "1.11"
serde_repr = "0.1"

[dev-dependencies]
async-trait.workspace = true
tokio.workspace = true
reqwest-retry.workspace = true
env_logger = "0.11"
http = "1.4"
